--- a/css/styles.css
+++ b/css/styles.css
@@ -63,10 +63,7 @@ h1,h2,h3,h4,h5,h6,p,ul {
   color: var(--title-text-color);
 }
 /* header */
-.header{
-  padding-top: 24px;
-  padding-bottom: 24px;
- }
+
  .main-nav { 
    display: flex;
    align-items: center;
@@ -101,13 +98,17 @@ h1,h2,h3,h4,h5,h6,p,ul {
   display: none;
   } 
  .auth-nav {
-    display: none;
+  display: none;
   }  
 }
-/* мобильное меню */
+/* мобильный телефон хедер */
+
 @media screen and (max-width: 767px) {
-  
-  .logo {
+ .header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);}
+ .logo {
     color: var(--accent-color);
     font-family: 'Raleway',sans-serif;
     font-weight: 800;
@@ -117,7 +118,7 @@ h1,h2,h3,h4,h5,h6,p,ul {
     text-transform: uppercase;
     text-decoration: none;
    }
-   .logo-header {
+ .logo-header {
     color: var(--primery-tetx-color);
     font-family: 'Raleway',sans-serif;
     font-weight: 800;
@@ -127,7 +128,24 @@ h1,h2,h3,h4,h5,h6,p,ul {
     text-transform: uppercase;
     text-decoration: none;
    }
-.mobil-menu {
+  
+ .site-nav .link {
+    display: block;
+    padding-top: 24px; 
+    color:var(--primery-tetx-color);
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.5;
+    transition: color var(--anim-fast);
+     }
+ .site-nav .link:hover,
+ .site-nav .link:focus {
+  color: var(--accent-color) } 
+
+/* мобильное меню */
+
+ .mobil-menu {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -137,12 +155,10 @@ h1,h2,h3,h4,h5,h6,p,ul {
   left: 0;
   background-color: #FFFFFF;
   box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.5);
-
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
   transition: var(--anim-fast);
-
 }
 .mobil-menu.is-open {
   opacity: 1;
@@ -151,20 +167,89 @@ h1,h2,h3,h4,h5,h6,p,ul {
 }
 .mobil-menu_container {
   position: relative;
+  display: flex;
   padding-left: 40px;
   padding-top: 80px;
   padding-bottom: 40px;
+  width: 100vw;
+  height: 100vh;
+  justify-content: space-around;
+  flex-direction: column;
 }
-/* кнопка меню */
+
+.site-nav-menu {
+  display: block;
+  text-decoration: none;
+}
+.site-nav-menu .link{
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+  color: #2E2F42;
+  text-decoration: none;
+}
+
+.site-nav-menu .item + .item {
+  margin-top: 40px;
+} 
+
+.site-nav-menu .link:hover,
+.site-nav-menu .link:focus {
+color: var(--accent-color)
+ }    
+.auth-nav-menu {
+margin-top: 284px;
+}
+.item-menu {
+  margin-top: 40px;
+}
+.link-phone {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 600;
+font-size: 36px;
+color: #4D5AE5;
+text-decoration: none;
+}
+.link-mail {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 24px;
+color: #434455;
+text-decoration: none;
+}
+
+.social-list-menu {
+  display: flex;
+  justify-content: center;
+  gap: 56px;
+  width: 328px;
+  margin-top: 48px;
+  
+  
+}
+/* кнопка мобильного меню */
 
 .mobil-menu_close-btn {
   position: absolute;
   top: 40px;
-  right: 15px;
-  background-color: transparent;
+  right: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
   border: none;
   padding: 0;
   line-height: 0;
+  border-radius: 50%;
+  background-color: #E7E9FC;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+   
 }
 }
 /* планшет  хедер*/
@@ -266,7 +351,7 @@ line-height: 16px;
   }
 }
 
-/* десктоп */
+/* десктоп хедер*/
 
 @media screen and (min-width: 1200px) {
    
@@ -274,8 +359,7 @@ line-height: 16px;
  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .main-nav {
- display: flex;
- align-items: center;  
+  justify-content: flex-start;
 }
 .site-nav {
   display: flex;
@@ -327,9 +411,113 @@ line-height: 16px;
    margin-top: 24px;
   }
 }
-*/
-/* hero */
+
+/*   hero mobil  */
+
+
+@media screen  and (max-width: 767px)
+{
 .hero {
+  min-height: 432px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  background-color: var(--primery-tetx-color);
+  background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/Dark-mobil-min.jpg');
+  background-size: cover;
+}
+.hero-title {
+  margin-top: 0;
+  margin-bottom: 72px;
+  padding-top: 112px;
+  color: var(--primery-white-color);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 1.07;
+ }
+.container-hero {
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),  
+screen and (min-resolution: 192dpi) and (max-width: 767px),
+screen and (min-resolution: 2dppx) and (max-width: 767px){
+  .hero {
+    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url('../images/Dark-mobil@2x-min.jpg');
+  } 
+}
+
+ /*  hero tablet */
+
+
+@media screen and (min-width: 768px) {
+  .hero {
+    display: block;
+    width: 768px;
+    height: 436px;
+    text-align: center;
+    background-size: cover;
+    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url('../images/Dark-tablet-min.jpg');
+  }
+  .container-hero { 
+    margin-left: auto;
+    margin-right: auto;
+    width: 735px; 
+}
+.hero-title {
+  margin-top: 0;
+  margin-bottom: 40px;
+  padding-top: 112px;
+  color: var(--primery-white-color);
+  font-size: 56px;
+}
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), 
+screen and (min-resolution: 192dpi) and (min-width: 768px),
+screen and (min-resolution: 2dppx) and (min-width: 768px){
+  .hero {
+    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url('../images/Dark-tablet@2x-min.jpg');
+  } 
+}
+
+/*   hero desctop   */
+
+
+@media screen and (min-width: 1200px) {
+  .hero {
+   display: block;
+   width: 1440px;
+   height: 600px;
+   text-align: center;
+   background-size: cover;
+   background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url('../images/people-desktop-min.jpg');
+  }
+  .container-hero { 
+    margin-left: auto;
+    margin-right: auto;
+    width: 1128px;
+  }
+  .hero-title { 
+    margin-bottom: 48px;
+    padding-top: 188px;
+    color: var(--primery-white-color);
+    font-size: 56px;
+    line-height: 1.07;
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), 
+screen and (min-resolution: 192dpi) and (min-width: 1200px),
+screen and (min-resolution: 2dppx) and (min-width: 1200px){
+  .hero {
+    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url('../images/people-desktop@2x-min.jpg');
+  } 
+}
+
+/* hero */
+/* .hero { 
 display: block;
 margin-left: auto;
 margin-right: auto;
@@ -339,12 +527,12 @@ padding-bottom: 192px;
 text-align: center;
 background-color: var(--primery-tetx-color);
 background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
-background-size: cover;
+background-size: cover; */
 /* outline: 2px solid tomato; */
 
 
-}
-.hero-title {
+
+/* .hero-title { 
   margin-top: 0;
   margin-bottom: 48px;
   color: var(--primery-white-color);
@@ -352,7 +540,14 @@ background-size: cover;
   font-weight: 500;
   font-size: 56px;
   line-height: 1.07;
+ }*/
+ /*  Контейнер hero*/
+
+/**/
+   /* outline: 2px solid tomato; */ 
+   
  }
+ 
 
   /* Пруимущества */
 .item-icon-list {
@@ -372,15 +567,6 @@ background-size: cover;
  align-items: center;
 }
 
-/*  Контейнер hero*/
-
-.container-hero {
- margin-left: auto;
- margin-right: auto;
- width: 1128px;
-  /* outline: 2px solid tomato; */ 
-  
-}
 
 
 
