--- a/css/styles.css
+++ b/css/styles.css
@@ -588,9 +588,15 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
   .feature-list {  
   display: flex;
   flex-wrap: wrap;
-  
+  margin-left: -24px;
+  margin-top: -72px;
   }
-  .feature-list > .item { 
+  .feature-list > .item {
+    flex-basis: calc(100% / 2 - 24px);
+    margin-left: 24px;
+    margin-top: 72px;
+  }
+  /* .feature-list > .item { 
    width: 351px;
    height: 120px;
 
@@ -600,7 +606,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
   }
   .feature-list>.item:nth-last-child(-n + 2) {
     margin-top: 72px;
-  }
+  } */
     
 .feature-list >.title-list {
   margin-top: 0;
@@ -775,7 +781,8 @@ font-size: 20px;
   flex-wrap: wrap;
   justify-content: center;
  }
-.team-list>.item-team {
+ 
+ .team-list>.item-team { 
   margin-right: 0;
   margin-left: 24px;
 }
